--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,16 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="#">Recipes</a>
+        <a class="nav-link" href="#" (click)="onSelect('recipe')">Recipes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Shopping List</a>
+        <a class="nav-link" href="#" (click)="onSelect('shopping-list')">Shopping List</a>
       </li>
     </ul>
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" role="button">Manage</a>
+        <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
 
         <ul class="dropdown-menu">
           <li><a href="#">Save Data</a></li>
