--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,17 @@
 <div class="row">
   <div class="col-12">
-    <img src="" alt="" class="img-responsive" />
+    <img
+         [src]="recipe.imagePath"
+         alt="{{ recipe.name }}"
+         class="img-responsive"
+         style="max-height: 300px;"
+         />
   </div>
 </div>
 
 <div class="row">
   <div class="col-12">
-    <h4>Recipe Name:</h4>
+    <h4>{{ recipe.name }}</h4>
   </div>
 </div>
 
@@ -27,7 +32,7 @@
 
 <div class="row">
   <div class="col-12">
-    Description
+    {{ recipe.description }}
   </div>
 </div>
 
