--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,12 @@
 <div class="row">
   <div class="col-12">
   
-    <app-recipe-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipe-item>
+    <app-recipe-item *ngFor="let recipeEl of recipes"
+                     [recipe]="recipeEl"
+                     (recipeSelected)="onRecipeSelected(recipeEl)"
+                     >
+
+    </app-recipe-item>
   </div>
 </div>
 
