--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
     </ul>
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="dropdown">
+      <li class="dropdown" appDropdown>
         <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
 
         <ul class="dropdown-menu">
