--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,9 @@
 <div class="row">
   <div class="col-12">
-    <img
-         [src]="recipe.imagePath"
+    <img [src]="recipe.imagePath"
          alt="{{ recipe.name }}"
          class="img-responsive"
-         style="max-height: 300px;"
-         />
+         style="max-height: 300px;" />
   </div>
 </div>
 
@@ -15,7 +13,7 @@
   </div>
 </div>
 
-<div class="row">
+<!--<div class="row">
   <div class="col-12">
     <div class="btn-group"
          appDropdown>
@@ -30,7 +28,31 @@
       </ul>
     </div>
   </div>
+</div>-->
+
+<div class="row">
+  <div class="col-12">
+    <div ngbDropdown class="d-inline-block">
+      <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Manage Recipes</button>
+      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+        <a class="dropdown-item" style="cursor:pointer;">To Shopping List</a>
+        <a class="dropdown-item" style="cursor:pointer;">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor:pointer;">Delete Recipe</a>
+      </div>
+    </div>
+  </div>
 </div>
+
+<br />
+
+<div>
+  <select name="selectedQuantity" id="aantal" class="form-control" value="MANAGE" [(ngModel)]="selectedQuantity" style="width: 200px;">
+    <option *ngFor="let option of options" [value]="option">{{ option }}</option>
+  </select>
+
+</div>
+
+<br />
 
 <div class="row">
   <div class="col-12">
@@ -38,14 +60,17 @@
   </div>
 </div>
 
+<br />
+
 <div class="row">
   <div class="col-12">
     <ul class="list-group">
       <li class="list-group-item"
-        *ngFor="let ingredient of recipe.ingredients">
+          *ngFor="let ingredient of recipe.ingredients">
         {{ ingredient.name }} - {{ ingredient.amount }}
       </li>
     </ul>
   </div>
 </div>
+
 
