--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,6 @@
-<a href="#" class="list-group-item clearfix"
-   (click)="onSelected()"
+<a
+   style="cursor: pointer;"
+   class="list-group-item clearfix"
    >
   <div class="float-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
