--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -35,8 +35,8 @@
     <div ngbDropdown class="d-inline-block">
       <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Manage Recipes</button>
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <a class="dropdown-item" style="cursor:pointer;">To Shopping List</a>
-        <a class="dropdown-item" style="cursor:pointer;">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor:pointer;" (click)="addToShoppingList()">To Shopping List</a>
+        <a class="dropdown-item" style="cursor:pointer;" (click)="onEditRecipe()">Edit Recipe</a>
         <a class="dropdown-item" style="cursor:pointer;">Delete Recipe</a>
       </div>
     </div>
@@ -45,12 +45,12 @@
 
 <br />
 
-<div>
+<!--<div>
   <select name="selectedQuantity" id="aantal" class="form-control" value="MANAGE" [(ngModel)]="selectedQuantity" style="width: 200px;">
     <option *ngFor="let option of options" [value]="option">{{ option }}</option>
   </select>
 
-</div>
+</div>-->
 
 <br />
 
