--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col-12">
-    <button class="btn btn-primary">New Recipe</button>
+    <button class="btn btn-primary" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 
 <div class="row">
   <div class="col-12">
   
-    <app-recipe-item *ngFor="let recipeEl of recipes"
+    <app-recipe-item *ngFor="let recipeEl of recipes; let i = index"
                      [recipe]="recipeEl"
+                     [index]="i"
                      >
     </app-recipe-item>
   </div>
 </div>
-
 
