--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,103 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-12">
+    <form [formGroup]="recipeForm">
+
+      <div class="row">
+        <div class="col-12">
+          <button
+                  type="submit"
+                  class="btn btn-success"
+                  [disabled]="!recipeForm.valid"
+                  >Save</button>
+          <button type="submit" class="btn btn-dark" style="margin-left: 10px;">Cancel</button>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="row">
+        <div class="col-12">
+          <div class="form-froup">
+            <label for="name">Name</label>
+            <input type="text"
+                   id="name"
+                   formControlName="name"
+                   class="form-control" />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="form-froup">
+            <label for="imagePath">Image URL</label>
+            <input type="text"
+                   id="imagePath"
+                   formControlName="imagePath"
+                   class="form-control" />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <img src="" class="img-responsive" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+          <div class="form-froup">
+            <label for="description">Description</label>
+            <textarea type="text"
+                      id="description"
+                      class=form-control
+                      formControlName="description"
+                      rows="6">
+            </textarea>
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="row">
+        <div class="col-12" formArrayName="ingredients">
+          <div class="row"
+               *ngFor="let ingredientCtrl of controls; let i = index"
+               [formGroupName]="i"
+               style="margin-top: 10px;"
+               >
+
+            <div class="col-8">
+              <input
+                     type="text"
+                     formControlName="name"
+                     class="form-control" />
+            </div>
+
+            <div class="col-2">
+              <input type="number"
+                     class="form-control"
+                     formControlName="amount"/>
+            </div>
+
+            <div class="col-2">
+              <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+
+          <hr />
+
+          <div class="row">
+            <div class="col-12">
+              <button type="button" class="btn btn-secondary" (click)="onAddIngredient()">Add Ingredient</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
