--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -31,7 +31,12 @@
       <div class="row">
         <div class="col-12">
           <button class="btn btn-secondary" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
-          <button class="btn btn-danger" type="submit">Delete</button>
+          <button
+                  class="btn btn-danger"
+                  type="submit"
+                  (click)="onDelete()"
+                  *ngIf="editMode"
+                  > Delete</button>
           <button class="btn btn-light" type="submit" (click)="onClear()">Clear</button>
         </div>
       </div>
