--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,23 +13,6 @@
   </div>
 </div>
 
-<!--<div class="row">
-  <div class="col-12">
-    <div class="btn-group"
-         appDropdown>
-
-      <button type="button" class="btn btn-primary dropdown-toggle">
-        Manage Recipe <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a (click)="addToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
-      </ul>
-    </div>
-  </div>
-</div>-->
-
 <div class="row">
   <div class="col-12">
     <div ngbDropdown class="d-inline-block">
@@ -37,20 +20,11 @@
       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
         <a class="dropdown-item" style="cursor:pointer;" (click)="addToShoppingList()">To Shopping List</a>
         <a class="dropdown-item" style="cursor:pointer;" (click)="onEditRecipe()">Edit Recipe</a>
-        <a class="dropdown-item" style="cursor:pointer;">Delete Recipe</a>
+        <a class="dropdown-item" style="cursor:pointer;" (click)="onDeleteRecipe()">Delete Recipe</a>
       </div>
     </div>
   </div>
 </div>
-
-<br />
-
-<!--<div>
-  <select name="selectedQuantity" id="aantal" class="form-control" value="MANAGE" [(ngModel)]="selectedQuantity" style="width: 200px;">
-    <option *ngFor="let option of options" [value]="option">{{ option }}</option>
-  </select>
-
-</div>-->
 
 <br />
 
