--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <form [formGroup]="recipeForm">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
 
       <div class="row">
         <div class="col-12">
@@ -9,7 +9,7 @@
                   class="btn btn-success"
                   [disabled]="!recipeForm.valid"
                   >Save</button>
-          <button type="submit" class="btn btn-dark" style="margin-left: 10px;">Cancel</button>
+          <button type="submit" class="btn btn-dark" style="margin-left: 10px;" (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
