--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -34,14 +34,15 @@
             <input type="text"
                    id="imagePath"
                    formControlName="imagePath"
-                   class="form-control" />
+                   class="form-control"
+                   #imagePath/>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-12">
-          <img src="" class="img-responsive" />
+          <img [src]="imagePath.value" class="img-responsive" />
         </div>
       </div>
 
@@ -83,7 +84,7 @@
             </div>
 
             <div class="col-2">
-              <button class="btn btn-danger">X</button>
+              <button type="button" class="btn btn-danger" (click)="onDeleteIngredient(i)">X</button>
             </div>
           </div>
 
