--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,14 +15,25 @@
     </ul>
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="dropdown" appDropdown>
+      <!--<li class="dropdown" appDropdown>
         <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
 
         <ul class="dropdown-menu">
-          <li><a>Save Data</a></li>
-          <li><a>Fetch Data</a></li>
+          <li><a class="dropdown-item">Save Data</a></li>
+          <li><a class="dropdown-item">Fetch Data</a></li>
         </ul>
+      </li>-->
+
+      <li>
+        <div ngbDropdown class="d-inline-block">
+          <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Manage</button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a>
+            <a class="dropdown-item" style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a>
+          </div>
+          </div>
       </li>
+
     </ul>
   </div>
 </nav>
