--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,29 +6,25 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/recipes" routerLinkActive="active">Recipes</a>
+      <li class="nav-item" *ngIf="isAuthenticated">
+        <a class="nav-link" routerLink="/recipes" routerLinkActive="active" >Recipes</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-list" routerLinkActive="active">Shopping List</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="!isAuthenticated">
         <a class="nav-link" routerLink="/auth" routerLinkActive="active">Authenticate</a>
       </li>
     </ul>
 
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <!--<li class="dropdown" appDropdown>
-        <a class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
 
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item">Save Data</a></li>
-          <li><a class="dropdown-item">Fetch Data</a></li>
-        </ul>
-      </li>-->
+      <li *ngIf="isAuthenticated">
+        <a class="dropdown-item" style="cursor: pointer;" (click)="onLogout()">Logout</a>
+      </li>
 
       <li>
-        <div ngbDropdown class="d-inline-block">
+        <div ngbDropdown class="d-inline-block" *ngIf="isAuthenticated">
           <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Manage</button>
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
             <a class="dropdown-item" style="cursor: pointer;" (click)="onSaveData()">Save Data</a>
