--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,16 @@
+<ng-template appPlaceholder></ng-template>
+
 <div class="row">
   <div class="col-12 col-md-6 col-md-offset-3">
-    <div class="alert alert-danger" *ngIf="error">
-      <p>{{ error }}</p>
-    </div>
+    <!--<div class="alert alert-danger" *ngIf="error">
+    <p>{{ error }}</p>
+  </div>-->
+
+     <!--<app-alert
+    [message]="error"
+    *ngIf="error"
+    (close)="onHandleError()"
+  ></app-alert>--> 
 
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading-spinner></app-loading-spinner>
@@ -11,28 +19,24 @@
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
       <div class="form-group">
         <label for="email">E-Mail</label>
-        <input
-               type="email"
+        <input type="email"
                id="email"
                class="form-control"
                ngModel
                name="email"
                required
-               email
-         />
+               email />
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input
-               type="password"
+        <input type="password"
                id="password"
                class="form-control"
                ngModel
                name="password"
                required
-               minlength="6"
-        />
+               minlength="6" />
       </div>
 
       <div>
