--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -65,14 +65,12 @@
       <div class="row">
         <div class="col-12" formArrayName="ingredients">
           <div class="row"
-               *ngFor="let ingredientCtrl of controls; let i = index"
+               *ngFor="let ingredientCtrl of ingredientsControls; let i = index"
                [formGroupName]="i"
-               style="margin-top: 10px;"
-               >
+               style="margin-top: 10px;">
 
             <div class="col-8">
-              <input
-                     type="text"
+              <input type="text"
                      formControlName="name"
                      class="form-control" />
             </div>
@@ -80,7 +78,7 @@
             <div class="col-2">
               <input type="number"
                      class="form-control"
-                     formControlName="amount"/>
+                     formControlName="amount" />
             </div>
 
             <div class="col-2">
